<resources>
    <string name="app_name">Sistema de Gestión Académica</string>
    <string name="app_description">Este es el Sistema de Gestión Académica en este sitio podrás consultar la oferta
        académica es decir las diferentes carreras, cursos y grupos disponibles del curso lectivo actual, también es
        posible consultar tú historial académico para conocer las notas obtenidas en cada curso.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_mantenimiento">Mantenimiento</string>
    <string name="menu_oferta_acad_mica">Oferta Académica</string>
    <string name="menu_carreras">Carreras</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_profesores">Profesores</string>
    <string name="menu_alumnos">Alumnos</string>
    <string name="menu_ciclos">Ciclos</string>
    <string name="menu_matr_cula">Matrícula</string>
    <string name="menu_historial_acad_mico">Historial Académico</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_seguridad">Seguridad</string>
    <string name="registro_de_notas">Registro de Notas</string>
    <string name="agregar_elemento">Agregar Elemento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mantenimiento_de_administradores_y_matriculadores">Mantenimiento de Administradores y Matriculadores
    </string>
    <string name="carrera">Carrera</string>
    <string name="ciclo">Ciclo</string>
    <string name="curso">Curso</string>
    <string name="lista_de_grupos">Lista de Grupos</string>
    <string name="c_dula_estudiante">Cédula Estudiante</string>
    <string name="nombre_estudiante">Nombre Estudiante</string>
    <string name="grupo">Grupo</string>
    <string name="lista_de_estudiantes">Lista de Estudiantes</string>
    <string name="cerrar">Cerrar</string>
    <string name="guardar">Guardar</string>
    <string name="c_digo">Código</string>
    <string name="nombre">Nombre</string>
    <string name="t_tulo">Título</string>
    <string name="cr_ditos">Créditos</string>
    <string name="horas_semanales">Horas Semanales</string>
    <string name="c_dula">Cédula</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email">Email</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="fecha_incio">Fecha Incio</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="n_mero">Número</string>
    <string name="a_o">Año</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="perfil">Perfil</string>
    <string name="estado">Estado</string>
    <string name="horario">Horario</string>
    <string name="c_dula_profesor">Cédula Profesor</string>
    <string name="nota">Nota</string>
    <string name="c_dula_del_estudiante">Cédula del Estudiante</string>
    <string name="historial_acad_mico">Historial Académico</string>
</resources>